--- a/.github/workflows/validate_filenames.yml
+++ b/.github/workflows/validate_filenames.yml
@@ -15,15 +15,17 @@ jobs:
           
           # List all files (excluding directories) and check for specific Windows invalid characters
           echo "Listing files in repository..."
-          git ls-tree -r --name-only HEAD
           
+          # Use git ls-files instead of ls-tree to list files only
+          files=$(git ls-files)
+
           # Get files that might contain Windows-incompatible characters
-          invalid_files=$(git ls-tree -r --name-only HEAD | grep -P -v '/$' | grep -P '([<>:"\\|?*])')
-          
+          invalid_files=$(echo "$files" | grep -P '([<>:"\\|?*])')
+
           # Debug: Show the files being checked
           echo "Files being checked:"
           echo "$invalid_files"
-
+          
           # If invalid files are found
           if [[ -n "$invalid_files" ]]; then
             echo "❌ Error: The following files contain invalid Windows characters:"
