--- a/.github/workflows/validate_filenames.yml
+++ b/.github/workflows/validate_filenames.yml
@@ -19,10 +19,20 @@ jobs:
           echo "Files found in the repository:"
           echo "$files"
           
-          # Check for files with Windows-incompatible characters
-          invalid_files=$(echo "$files" | grep -P '([<>:"\\|?*])')
+          # Initialize variable to collect invalid files
+          invalid_files=""
           
-          # Debugging: Show files with invalid characters
+          # Check each file for invalid Windows characters
+          for file in $files; do
+            echo "Checking: $file"
+            # If filename contains Windows-incompatible characters, append to invalid_files
+            if echo "$file" | grep -P '([<>:"\\|?*])' > /dev/null; then
+              echo "❌ Invalid filename detected: $file"
+              invalid_files+="$file"$'\n'
+            fi
+          done
+          
+          # Debug: Show files with invalid characters
           if [[ -z "$invalid_files" ]]; then
             echo "✅ No invalid filenames found!"
           else
